@startuml

' ----- Other Entities -----

entity User
entity "ScriptureMastery.csv" as CSVFile {
  Reference Book,
  Chapter:Verse,
  """Scripture"" | ""Verse"""
}

' ----- Classes -----

class Program {
  - _filePath : string
  - _quit : bool
  + Main() : void
  + LoadScriptureMastery() : List<string>
  + BuildScripture(pickedCSVLine : string) : Scripture
  + RunMemorizeLoop(scripture : Scripture) : void
}
class Scripture {
  - _reference : Reference
  - _words : List<Word>
  + Scripture(reference : Reference, scriptureText : string)
  + GetDisplayText() : string
  + HideRandomWord() : void
  + AllWordsHidden() : bool
}
class Reference {
  - _book : string
  - _chapter : int
  - _startVerse : int
  - _endVerse : int?
  - _addStartVerse : int?
  - _addEndVerse : int?
  + Reference(_book, _chapter, _startVerse, _otherAttributes?)
  + GetReference() : string
  + ParseReference(book : string, chapterVerse : string) : Reference
}
class Word {
  - _content : string
  - _isHidden : bool
  + Word(content : string)
  + GetDisplayContent() : string
  + Hide() : void
  + IsHidden() : bool
}

' ----- Relationships -----


User --> Program : Runs Program

Program --> CSVFile : Reads CSV Data into List
Program --> Scripture : Transforms List into Scripture Mastery

Scripture --> Reference : Parses Data into Reference
Scripture --> Word : Parses List into Word Strings

@enduml